# mlops

./: .gitignore
lab1/: best_model_cnn.pth  lab1.ipynb
lab2/: config.yaml  mlops_lab2.ipynb  pyproject.toml  requirements.txt
lab3/: dvc.yaml  lab3.ipynb  metrics.txt  params.yaml
lab3/scripts/: download_data.py  evaluate_model.py  train_model.py
lab4/: config.yaml  lab4.ipynb
lab4/mlruns/0/: meta.yaml
lab4/mlruns/830635774554733607/: meta.yaml
lab4/mlruns/830635774554733607/0538c6f734dc4a43bb0af1bfb2261343/: meta.yaml
lab4/mlruns/830635774554733607/3b3fef3d59854430ad31ed34b5112150/: meta.yaml
lab4/mlruns/830635774554733607/5c91b33b14c0448ca6abc22df4df5e64/: meta.yaml
lab4/mlruns/830635774554733607/cc391bcb82a340da83c7daee4e01a5eb/: meta.yaml
lab4/mlruns/830635774554733607/db01ee9e683146829804e286cd15e36b/: meta.yaml
lab4/mlruns/830635774554733607/f5c53bf91a1440459e1047ad7c926c90/: meta.yaml
lab5/: best_model.txt  lab5.ipynb
lab5/wandb/run-20250614_152032-dhgay7pz/: run-dhgay7pz.wandb
lab5/wandb/run-20250614_152032-dhgay7pz/files/: wandb-metadata.json
lab5/wandb/run-20250614_152039-x57kldnd/: run-x57kldnd.wandb
lab5/wandb/run-20250614_152039-x57kldnd/files/: config.yaml  wandb-metadata.json
lab5/wandb/run-20250614_152116-rm6ploqg/files/: requirements.txt  wandb-metadata.json
lab5/wandb/run-20250614_152451-3ejvf0u3/: run-3ejvf0u3.wandb
lab5/wandb/run-20250614_152451-3ejvf0u3/files/: wandb-metadata.json  (+1 more)
lab5/wandb/run-20250614_154525-l3rj8ziq/: run-l3rj8ziq.wandb
lab5/wandb/run-20250614_154526-9s0iqy6e/: run-9s0iqy6e.wandb
(+25 files in other folders)
